[package]
name = "maverick-macroquad"
version = "0.1.0"
authors = ["ctfhacker <cld251@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "*"
boardgames-macroquad = { path = "../boardgames-macroquad" }
once_cell = "1.4.0"
